--- a/views/home.erb
+++ b/views/home.erb
@@ -1,4 +1,11 @@
 <h1> Currency pairs</h1>
   <ul>
-    <li><a>Convert USD to</a></li>
+    <% @all_currencies_hash.each do |display|
+        number = 0
+        
+        current    
+    %>
+
+      <li> <%= display%> </li>
+      <% end %>
   </ul>
