--- a/views/display.erb
+++ b/views/display.erb
@@ -1,1 +1,10 @@
 <h1> Convert <%=@country1%> </h1>
+
+Go <a href="https://special-space-succotash-v6p5479qjpg4cpqg5-3000.app.github.dev/"> back</a>.
+
+  <ul>
+    <% @country_codes.each do |display| %>
+        <li> Convert 1 <%=@country1%> to <%= display %>...</li> 
+    <% end %>
+
+  </ul>
