--- a/views/display.erb
+++ b/views/display.erb
@@ -4,7 +4,7 @@ Go <a href="https://special-space-succotash-v6p5479qjpg4cpqg5-3000.app.github.de
 
   <ul>
     <% @country_codes.each do |display| %>
-        <li> Convert 1 <%=@country1%> to <%= display %>...</li> 
+        <li><a href="<%=@country1%>/<%=display%>"> Convert 1 <%=@country1%> to <%= display %>...</li> 
     <% end %>
 
   </ul>
