--- a/views/home.erb
+++ b/views/home.erb
@@ -1,7 +1,7 @@
 <h1> Currency pairs</h1>
   <ul>
     <% @country_codes.each do |display| %>
-        <li> <a href="<%=display%>"> Convert 1 <%= display %> to...</li> 
+        <li> <a href="/<%=display%>"> Convert 1 <%= display %> to...</li> 
     <% end %>
 
   </ul>
