--- a/views/result.erb
+++ b/views/result.erb
@@ -2,4 +2,4 @@
 
 <p> 1 <%=@country1%> equals <%=@result%> <%= @country2%>. </p>
 
-Go <a href="https://special-space-succotash-v6p5479qjpg4cpqg5-3000.app.github.dev/"> back</a>.
+Go <a href="/<%=@country1%>"> back</a>.
